@@ -3,6 +3,7 @@
 	* merged to stable: new class design
 	* inotify has been replaced
 	* merged to stable: new way of finding the new entries in the log file
+	* fixed various bugs: no classif, priority
 
 
 2011-05-25
